# fitparse

./: .gitignore  cabal.project  fitparse.cabal  hie.yaml  stack.yaml
dist-newstyle/cache/: config
fitparse-analytics/: fitparse-analytics.cabal
fitparse-analytics/src/Fitparse/: Analytics.hs
fitparse-core/: README.md  fitparse-core.cabal  hie.yaml  stack.yaml
fitparse-core/profile/: types.csv
fitparse-core/src/: BaseTypes.hs  FitMessage.hs  Fitparse.hs  Parse.hs  Signed.hs
fitparse-core/src/Fitparse/: BaseTypes.hs  FitMessage.hs  FitType.hs  Model.hs  Parse.hs
fitparse-core/src/Fitparse/TH/: Messages.hs  ProfileMessages.hs  ProfileTypes.hs  Types.hs
fitparse-core/src/TH/: Messages.hs  Types.hs
fitparse-core/test/: Spec.hs  THSpec.hs  test_2.fit
fitparse-query/: fitparse-query.cabal  stack.yaml
fitparse-query/src/Fitparse/: Query.hs  Util.hs
fitparse-query/test/: Spec.hs
profile/: messages.csv
src/: FileTypes.hs  FitMessage.hs  FitType.hs  Fitparse.hs  Model.hs  Parse.hs
src/TH/: Messages.hs  ProfileMessages.hs  ProfileTypes.hs  Types.hs
test/: Spec.hs  test.fit
