name:                fitparse-analytics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fitparse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Fitparse.Model
                     , Fitparse.Parse
                     , Fitparse.BaseTypes
                     , Fitparse.FitType
                     , Fitparse.FitMessage
                     , Fitparse.TH.Types
                     , Fitparse.TH.Messages
                     , Fitparse.TH.ProfileTypes
                     , Fitparse.TH.ProfileMessages
                     , Fitparse

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , containers
                     , text
                     , lens
                     , vector
                     , bytestring

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , fitparse
                     , hspec
                     , resourcet
